[package]
name = "fsh"
version = "0.1.0"
edition = "2021"
authors = ["FSH Team"]
description = "Folder Shell Protocol - A secure folder-level remote shell protocol"
license = "MIT"
repository = "https://github.com/fsh-protocol/fsh"

[[bin]]
name = "fsh-server"
path = "src/bin/server.rs"

[[bin]]
name = "fsh-client"
path = "src/bin/client.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Terminal/console
crossterm = "0.27"
ratatui = "0.24"

# System utilities
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
rand = "0.8"
ring = "0.17"

# Networking
rustls = "0.21"
tokio-rustls = "0.24"

# File system
walkdir = "2"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "5"

# Additional crypto and utilities
hex = "0.4"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"